src/objects/Controlled_Document__c.object
<CustomObject>
    <fields>
        <fullName>Allow_ExecSec_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, this field grants ExecSec users access to this Controlled Document record.</inlineHelpText>
        <label>Allow ExecSec Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the ExecSec user assigned to the record.</inlineHelpText>
        <label>ExecSec Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Controlled_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Record_Number_s__c</fullName>
        <inlineHelpText>This field is used to capture any Document IDs that are related to this record.</inlineHelpText>
        <label>Associated Record Number(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Congressional__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this field indicates that the Controlled Document is related to a Congressional request, correspondence, or issue.</inlineHelpText>
        <label>Congressional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Award_Date__c</fullName>
        <inlineHelpText>Date Contract has been/will be awarded</inlineHelpText>
        <label>Contract Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Category__c</fullName>
        <inlineHelpText>Select one or both contract category</inlineHelpText>
        <label>Contract Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commodity</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <inlineHelpText>Contract Received Date</inlineHelpText>
        <label>Contract Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Correspondence_Type__c</fullName>
        <inlineHelpText>The type of document represented by the primary file(s) being approved through this record.</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Plan</fullName>
                </value>
                <value>
                    <fullName>AFR</fullName>
                </value>
                <value>
                    <fullName>Annual Report</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>ASF: Cost &amp; Capital Plan</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Claim</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Dashboard</fullName>
                </value>
                <value>
                    <fullName>Delegation</fullName>
                </value>
                <value>
                    <fullName>Directive</fullName>
                </value>
                <value>
                    <fullName>E-Gov Reporting</fullName>
                </value>
                <value>
                    <fullName>FISMA</fullName>
                </value>
                <value>
                    <fullName>Forms</fullName>
                </value>
                <value>
                    <fullName>GAO Draft Response</fullName>
                </value>
                <value>
                    <fullName>GAO Final Response</fullName>
                </value>
                <value>
                    <fullName>Hazardous Waste Report</fullName>
                </value>
                <value>
                    <fullName>Home-To-Work</fullName>
                </value>
                <value>
                    <fullName>IG Audit</fullName>
                </value>
                <value>
                    <fullName>IG Draft Response</fullName>
                </value>
                <value>
                    <fullName>IG Final Response</fullName>
                </value>
                <value>
                    <fullName>Instructional Letter</fullName>
                </value>
                <value>
                    <fullName>Interagency Agreement</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Lease Prospectus</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Memorandum</fullName>
                </value>
                <value>
                    <fullName>MOU</fullName>
                </value>
                <value>
                    <fullName>Occupational Safety &amp; Health</fullName>
                </value>
                <value>
                    <fullName>OMB Scorecard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Location_Start_Date_New__c</fullName>
        <label>Current Location Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <description>User selects what office/region/sub-office currently has the document</description>
        <label>Current Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional and Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>Y - Federal Permitting Improvement Steering Council</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
                <value>
                    <fullName>Region 1A</fullName>
                </value>
                <value>
                    <fullName>Region 1P</fullName>
                </value>
                <value>
                    <fullName>Region 1Q</fullName>
                </value>
                <value>
                    <fullName>Region 2A</fullName>
                </value>
                <value>
                    <fullName>Region 2P</fullName>
                </value>
                <value>
                    <fullName>Region 2Q</fullName>
                </value>
                <value>
                    <fullName>Region 3A</fullName>
                </value>
                <value>
                    <fullName>Region 3P</fullName>
                </value>
                <value>
                    <fullName>Region 3Q</fullName>
                </value>
                <value>
                    <fullName>Region 4A</fullName>
                </value>
                <value>
                    <fullName>Region 4P</fullName>
                </value>
                <value>
                    <fullName>Region 4Q</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Region__c</fullName>
        <label>Current Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Stage_Start_Date_New__c</fullName>
        <label>Current Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date_Year_End2__c</fullName>
        <formula>IF(  MONTH(Cut_Off_Date__c) &lt; 10, DATE (YEAR( Cut_Off_Date__c ), 09, 30), DATE ((YEAR( Cut_Off_Date__c )+1), 09, 30))</formula>
        <inlineHelpText>The last day of the fiscal year in which the Cut-Off Date occurs.</inlineHelpText>
        <label>Cut-Off Date Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cut_Off_Date__c</fullName>
        <inlineHelpText>The date the record is considered completed, closed or superfluous for record retention purposes.</inlineHelpText>
        <label>Cut-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <inlineHelpText>The date the record is closed. This field cannot be completed until the Stage is set to Closed. When the Stage is set to Closed, this field is automatically populated with the current date. However, this date can be edited.</inlineHelpText>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <inlineHelpText>The date correspondence received or control started.</inlineHelpText>
        <label>Date Received/Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Incoming__c</fullName>
        <inlineHelpText>The date indicated on the incoming piece of correspondence, if applicable.</inlineHelpText>
        <label>Date of Incoming</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Current_Location_New__c</fullName>
        <label>Days In Current Location</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_On_Current_Stage_New__c</fullName>
        <label>Days On Current Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <inlineHelpText>A calculation of the number of days a record has been open. This field is the difference between the ExecSec Start Date and either the current date, or the ExecSec End Date if that field is populated.</inlineHelpText>
        <label>ExecSec Business Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>A calculation of the number of days a record has been open beyond the Due Date. This field is calculated as the number of business days that have passed since the Due Date before the record was marked as closed (i.e., Stage = Closed). If today&apos;s date is still before the Due Date, the field should either be blank or show a 0. Once the record has been closed and has a Date Closed, the calculation should use that field instead of today&apos;s date to calculate the &quot;Days Overdue&quot; field.</description>
        <inlineHelpText>This is a calculation of the number of business days a record has been or was open (i.e., Stage was not Closed) beyond the Due Date.</inlineHelpText>
        <label>Business Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Directives_Clearance_Due_Date__c</fullName>
        <description>The Date all clearances are due.</description>
        <inlineHelpText>The Date all clearances are due.</inlineHelpText>
        <label>Directives Clearance Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Directives_Coordination_Due_Date__c</fullName>
        <description>The Date all coordination clearances are due.</description>
        <inlineHelpText>The Date all coordination clearances are due.</inlineHelpText>
        <label>Directives Coordination Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>The due date for the final signer.</description>
        <inlineHelpText>The due date for the final signer.</inlineHelpText>
        <label>Requested Due Date - Signer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date_for_Signature__c</fullName>
        <inlineHelpText>The Due Date for Signature field is used to indicate the date by which the final signature for this document should be obtained.</inlineHelpText>
        <label>Due Date for Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this field indicates that this record qualifies for an exception and should not be factored into the reports regarding record processing timeliness.</inlineHelpText>
        <label>Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecSec_Days_Overdue__c</fullName>
        <description>The number of business days that have passed beyond the ExecSec Due Date. If the ExecSec End Date is populated, this field represents the number of business days that passed between the ExecSec Due Date and the ExecSec End Date.</description>
        <inlineHelpText>The number of business days that have passed beyond the ExecSec Due Date. If the ExecSec End Date is populated, this field represents the number of business days that passed between the ExecSec Due Date and the ExecSec End Date.</inlineHelpText>
        <label>ExecSec Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecSec_Due_Date__c</fullName>
        <inlineHelpText>The date by when ExecSec should complete their work on the record. This is generally the day it is sent for signature.</inlineHelpText>
        <label>ExecSec Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecSec_End_Date__c</fullName>
        <inlineHelpText>The date ExecSec completed their work on this record.</inlineHelpText>
        <label>ExecSec End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExecSec_Filters__c</fullName>
        <label>ExecSec Filters</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator Due (any reason)</fullName>
                </value>
                <value>
                    <fullName>Agency-wide Clearance - PBS</fullName>
                </value>
                <value>
                    <fullName>Data Pull</fullName>
                </value>
                <value>
                    <fullName>Directive</fullName>
                </value>
                <value>
                    <fullName>Directives - Org change</fullName>
                </value>
                <value>
                    <fullName>Exemption</fullName>
                </value>
                <value>
                    <fullName>FAS handling</fullName>
                </value>
                <value>
                    <fullName>FYI</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>No response necessary (NRN)</fullName>
                </value>
                <value>
                    <fullName>Not Counted</fullName>
                </value>
                <value>
                    <fullName>OAS handling</fullName>
                </value>
                <value>
                    <fullName>OCIA handling</fullName>
                </value>
                <value>
                    <fullName>PBS handling</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Referred to other agency</fullName>
                </value>
                <value>
                    <fullName>Service Letter</fullName>
                </value>
                <value>
                    <fullName>Transition</fullName>
                </value>
                <value>
                    <fullName>White House</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExecSec_Start_Date__c</fullName>
        <inlineHelpText>This shows the date that ExecSec begins working on a Controlled Document record, but can be changed by ExecSec users.</inlineHelpText>
        <label>ExecSec Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expedite_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please select this option if the Controlled Document is being approved faster than a typical record. If this option is selected, the &quot;Instructions for Expediting&quot; field must also be completed.</inlineHelpText>
        <label>Expedite Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedited__c</fullName>
        <formula>IF(OR(Expedite_Record__c, ISPICKVAL(External_Hard_Due_Date__c, &quot;Y&quot;)), IMAGE(&quot;/servlet/servlet.FileDownload?file=01530000003Evp3&quot;, &quot;Expedite record alert&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgent?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Hard_Due_Date__c</fullName>
        <label>External Hard Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used to store the external ID from the legacy IQ system during the IQ to Force.com migration effort.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents who the intended Final Signatory of a Controlled Document should be.</description>
        <inlineHelpText>This field represents who the intended Final Signatory of a Controlled Document should be.</inlineHelpText>
        <label>Final Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Controlled_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freeze_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, this Controlled Document record should not be deleted from the system or archived.</inlineHelpText>
        <label>Freeze Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_Action_Required__c</fullName>
        <inlineHelpText>This field indicates the highest-level action required for record closure.</inlineHelpText>
        <label>GSA Action Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature/Approval of the Administrator</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the PBS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the FAS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the TTS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of H1AA Director</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OAS</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCFO</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCIA</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCIO</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCM</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCR</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OGC</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OGP</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OHRM</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OMA</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OSBU</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- TTS</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of PTT</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R1</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R2</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R3</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R4</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R5</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R6</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R7</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R8</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R9</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Due_Date_Missed__c</fullName>
        <inlineHelpText>If there is a hard due date, explain what will happen if the due date is missed.</inlineHelpText>
        <label>If Due Date Missed:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Correspondence_Format__c</fullName>
        <inlineHelpText>The medium used for the incoming piece of correspondence.</inlineHelpText>
        <label>Incoming Correspondence Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming_Correspondence_Notes__c</fullName>
        <inlineHelpText>Origin or correspondence notes.</inlineHelpText>
        <label>Source Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Doc__c</fullName>
        <inlineHelpText>This is a link to the incoming Doc.</inlineHelpText>
        <label>Incoming Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Instructions_for_Expediting__c</fullName>
        <description>This field is used to describe the reason and to detail the specific instructions associated with expediting the approval of this Controlled Document.</description>
        <inlineHelpText>This field is used to describe the reason and to detail the specific instructions associated with expediting the approval of this Controlled Document.</inlineHelpText>
        <label>Instructions for Expediting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_External__c</fullName>
        <description>This field indicates whether the file(s) being approved is a response to an outside request or is a GSA initiated document.</description>
        <inlineHelpText>External: Documents responding to request from outside GSA (e.g., congressional response). 
Internal: GSA-initiated documents to fulfill legal, regulatory, or other requirement (e.g., delegations, prospectuses, MOUs, reports).</inlineHelpText>
        <label>Internal/External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NARA_Classification__c</fullName>
        <inlineHelpText>Used to indicate whether a Controlled Document is a permanent or temporary record.</inlineHelpText>
        <label>NARA Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent Record</fullName>
                </value>
                <value>
                    <fullName>Temporary Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OMB_Flag__c</fullName>
        <description>This is a formula field to display the OMB picklist value with the highlighted color.</description>
        <formula>IMAGE( 
CASE 
(OMB__c, &quot;Pre-OMB&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Post-OMB&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot; 
), &quot;red&quot;, 20, 20 
)</formula>
        <label>OMB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMB__c</fullName>
        <label>OMB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-OMB</fullName>
                </value>
                <value>
                    <fullName>Post-OMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originating_Office__c</fullName>
        <inlineHelpText>The division originating or overseeing the Controlled Document. Once a value is selected, users from that Originating Service/Staff Office will be able to access and edit this Controlled Document unless further restrictions are implemented.</inlineHelpText>
        <label>Originating Service/Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>PTT - Presidential Transition Team</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional and Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>Y - Federal Permitting Improvement Steering Council</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_File_Deletion__c</fullName>
        <description>Reason to be Entered for the file deletion. This reason will be logged in the CDTDeletionLog Object</description>
        <label>Reason For File Deletion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>